@@ -39,7 +39,7 @@
 
 #ifndef lint
 #ifdef	DOSCCS
-static char sccsid[] = "@(#)version.c	2.294 (gritter) 2/12/05";
+static char sccsid[] = "@(#)version.c	2.295 (gritter) 2/16/05";
 #endif
 #endif /* not lint */
 
@@ -48,11 +48,11 @@ static char sccsid[] = "@(#)version.c	2.294 (gritter) 2/12/05";
  * Load this file first to get a "total" Mail version.
  */
 /*char	*version = "8.1 6/6/93";*/
-const char *version = "nail " V " 2/12/05";
+const char *version = "nail " V " 2/16/05";
 #ifndef	lint
 static const char *versionid
 #ifdef	__GNUC__
 __attribute__ ((unused))
 #endif
-= "@(#)nail " V " 2/12/05";
+= "@(#)nail " V " 2/16/05";
 #endif	/* !lint */
